--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -53,6 +53,17 @@
     margin-top: 20px;
     cursor: pointer;
 }
+.logout-button{
+    color: white;
+    background-color: black;
+    border: 0;
+    border-radius: 5px;
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    margin-top: 20px;
+    cursor: pointer;
+}
 .tasklist{
     background-color: black;
 }
@@ -98,6 +109,17 @@
     .add-task-button{
         color: white;
         background-color: blue;
+        border: 0;
+        border-radius: 5px;
+        text-align: center;
+        width: 100px;
+        height: 40px;
+        margin-top: 20px;
+        cursor: pointer;
+    }
+    .logout-button{
+        color: white;
+        background-color: black;
         border: 0;
         border-radius: 5px;
         text-align: center;
@@ -161,5 +183,16 @@
         }
         .tasklist{
             background-color: black;
+        }
+        .logout-button{
+            color: white;
+            background-color: black;
+            border: 0;
+            border-radius: 5px;
+            text-align: center;
+            width: 100px;
+            height: 40px;
+            margin-top: 20px;
+            cursor: pointer;
         }
         }
